Merubah jadwal tanggal Kajian

--- a/index.html
+++ b/index.html
@@ -228,20 +228,21 @@
 												Ba'da Maghrib - selesai<br>
 												Kajian Tematik Ilmiyyah<br>
 												Ustadz Emha Aminullah Makmun, B.A
+												<li><b>RABU</b></li>
+												setiap pekan sekali<br>
+												Ba'da Maghrib - selesai<br>
+												Kajian Tafsir Juz Amma<br>
+												Ustadz Subaidi, S.Ag
 												<li><b>KAMIS</b></li>
+												setiap pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Kitab Arbain Nawawiyah<br>
 												Ustadz Muhammad Yasir,lc.,M.Hi
 												<li><b>JUM'AT</b></li>
-												setiap 2 pekan sekali<br>
+												setiap pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Kitab Al Minahul Aliyah Fi Bayan As Sunanul Yaumiyah<br>
 												Ustadz Muhammad Ayyub,lc
-												<li><b>JUM'AT</b></li>
-												setiap 2 pekan sekali<br>
-												Ba'da Maghrib - selesai<br>
-												Kajian Tafsir Juz Amma<br>
-												Ustadz Subaidi, S.Ag
 											</ol>
 										</div>
 									</div>
@@ -282,6 +283,17 @@
 												Ba'da Maghrib - selesai<br>
 												Kajian Kitab Minhajul Muslim<br>
 												Ustadz Subaidi, S.Ag
+												<li><b>RABU</b></li>
+												setiap 2 pekan sekali<br>
+												Ba'da Maghrib - selesai<br>
+												Panduan Kitab : Lum'atul I'tiqod<br>
+												(Karya Imam Ibnu Qudamah)<br>
+												Ustadz Arif Husnul Khuluq, SH
+												<li><b>RABU</b></li>
+												setiap 2 pekan sekali<br>
+												Ba'da Maghrib - selesai<br>
+												Kajian Tafsir Al Qur'an<br>
+												Ustadz Sabilul Muhtadin, Lc.MHi
 											</ol>
 										</div>
 									</div>
@@ -515,15 +527,15 @@
 									<div class="collapse" id="perum">
 										<div class="card card-body text-start">
 											<ol>
-												<li><b>SENIN</b></li>
-												Setiap pekan sekali<br>
-												Jam 16.00 WIB - selesai<br>
-												Belajar Bahasa Arab<br>
-												Ustadz Subaidi, S.Ag
 												<li><b>SELASA</b></li>
 												Setiap pekan sekali<br>
 												Jam 16.00 WIB - selesai<br>
 												Tafsir Al Qur'an<br>
+												Ustadz Subaidi, S.Ag
+												<li><b>RABU</b></li>
+												Setiap pekan sekali<br>
+												Jam 16.00 WIB - selesai<br>
+												Belajar Bahasa Arab<br>
 												Ustadz Subaidi, S.Ag
 											</ol>
 										</div>
