Merubah jadwal tanggal Kajian

--- a/kajian_harian.html
+++ b/kajian_harian.html
@@ -181,12 +181,6 @@
 											Ba'da Maghrib - selesai
 										</li>
 										<li>
-											<b>Belajar Bahasa Arab</b><br>
-											Ustadz Subaidi, S.Ag<br>
-											setiap pekan sekali<br>
-											Jam 16.00 WIB - selesai
-										</li>
-										<li>
 											<b>Kajian Online Tematik Ilmiyyah</b><br>
 											Ustadz Emha Aminullah Makmun, B.A <br>
 											setiap pekan sekali<br>
@@ -264,14 +258,39 @@
 											Ba'da Maghrib - selesai
 										</li>
 										<li>
+											<b>Kajian Kitab Tuhfatul Kiram</b><br>
+											Ustadz Agus Barnianto<br>
+											setiap 2 pekan sekali<br>
+											Ba'da Maghrib - selesai
+										</li>
+										<li>
 											<b>Kajian Kitab Ad-Daa'wa Ad-Dawaa'</b><br>
 											Ustadz Subaidi, S.Ag<br>
 											setiap pekan sekali<br>
 											Ba'da Maghrib - selesai
 										</li>
 										<li>
-											<b>Kajian Kitab Tuhfatul Kiram</b><br>
-											Ustadz Agus Barnianto<br>
+											<b>Belajar Bahasa Arab</b><br>
+											Ustadz Subaidi, S.Ag<br>
+											setiap pekan sekali<br>
+											Jam 16.00 WIB - selesai
+										</li>
+										<li>
+											<b>Kajian Tafsir Juz Amma</b><br>
+											Ustadz Subaidi, S.Ag <br>
+											Setiap pekan sekali<br>
+											Ba'da Maghrib - selesai
+										</li>
+										<li>
+											<b>Panduan Kitab : Lum'atul I'tiqod<br>
+												(Karya Imam Ibnu Qudamah)</b><br>
+											Ustadz Arif Husnul Khuluq, SH<br>
+											setiap 2 pekan sekali<br>
+											Ba'da Maghrib - selesai
+										</li>
+										<li>
+											<b>Kajian Tafsir Al Qur'an</b><br>
+											Ustadz Sabilul Muhtadin, Lc.MHi<br>
 											setiap 2 pekan sekali<br>
 											Ba'da Maghrib - selesai
 										</li>
@@ -337,13 +356,7 @@
 										<li>
 											<b>Kajian Kitab Al Minahul Aliyah Fi Bayan As Sunanul Yaumiyah</b><br>
 											Ustadz Muhammad Ayyub,lc <br>
-											Setiap 2 pekan sekali<br>
-											Ba'da Maghrib - selesai
-										</li>
-										<li>
-											<b>Kajian Tafsir Juz Amma</b><br>
-											Ustadz Subaidi, S.Ag <br>
-											Setiap 2 pekan sekali<br>
+											Setiap pekan sekali<br>
 											Ba'da Maghrib - selesai
 										</li>
 										<li>
