Merubah jadwal kajian

--- a/index.html
+++ b/index.html
@@ -188,10 +188,12 @@
 												Kajian Kitab Kasyfus Syubuhat<br>
 												Ustadz Agus Barnianto
 												<li><b>SENIN</b></li>
+												setiap pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Bahasa Arab Untuk Pemula<br>
 												Ustadz Afif Ibrahim, S.Ag
 												<li><b>SELASA</b></li>
+												setiap pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Kitab Mulakhkhosh Fiqh<br>
 												Ustadz Subaidi, S.Ag
@@ -224,7 +226,7 @@
 										<div class="card card-body text-start">
 											<ol>
 												<li><b>SELASA</b></li>
-												Setiap pekan sekali<br>
+												setiap 2 pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Tematik Ilmiyyah<br>
 												Ustadz Emha Aminullah Makmun, B.A
@@ -431,7 +433,7 @@
 										<div class="card card-body text-start">
 											<ol>
 												<li><b>SENIN</b></li>
-												setiap pekan sekali<br>
+												setiap 2 pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Kitab Tazkiyatun Nafs <br>
 												Ustadz Subaidi, S.Ag
@@ -565,6 +567,12 @@
 										<div class="card card-body text-start">
 											<b>KAJIAN ONLINE</b>
 											<ol>
+												<li><b>AHAD</b></li>
+												Setiap 2 pekan sekali<br>
+												07.45 WIB - selesai<br>
+												Kajian Kitab Minhajul Muslim<br>
+												Konsep Hidup Ideal dalam Islam<br>
+												Ustadz Alfaf Ismail, Lc
 												<li><b>SENIN</b></li>
 												Setiap pekan sekali<br>
 												08.00 WIB - selesai<br>
