--- a/kajian_harian.html
+++ b/kajian_harian.html
@@ -130,6 +130,13 @@
 											setiap 2 pekan sekali<br>
 											Ba'da Maghrib - selesai
 										</li>
+										<li>
+											<b>Kajian Online Kitab Minhajul Muslim</b><br>
+											Konsep Hidup Ideal dalam Islam<br>
+											Ustadz Alfaf Ismail, Lc<br>
+											Setiap 2 pekan sekali<br>
+											07.45 WIB - selesai<br>
+										</li>
 									</ol>
 								</div>
 							</div>
