merubah jadwal Al Fatih menjadi hari jumat

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 									<div class="collapse" id="fatih">
 										<div class="card card-body text-start">
 											<ol>
-												<li><b>RABU</b></li>
+												<li><b>JUM'AT</b></li>
 												Setiap pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Kitab Ad-Daa'wa Ad-Dawaa'<br>
