Perubahan jadwal kajian

--- a/kajian_harian.html
+++ b/kajian_harian.html
@@ -83,7 +83,11 @@
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 							<li><a class="drop dropdown-item" href="sholat.html"><img src="img/alarm-fill.svg" alt=""
-										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Bws
+								</a>
+							</li>
+							<li><a class="drop dropdown-item" href="prtimes.html"><img src="img/alarm-fill.svg" alt=""
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Kota
 								</a>
 							</li>
 							<li>
