--- a/murottal.html
+++ b/murottal.html
@@ -73,7 +73,11 @@
 								</a>
 							</li>
 							<li><a class="drop dropdown-item" href="sholat.html"><img src="img/alarm-fill.svg" alt=""
-										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Bws
+								</a>
+							</li>
+							<li><a class="drop dropdown-item" href="prtimes.html"><img src="img/alarm-fill.svg" alt=""
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Kota
 								</a>
 							</li>
 							<li><a class="drop dropdown-item" href="index.html"><img src="img/arrow-black.svg" alt=""
@@ -102,7 +106,8 @@
 		<div class="container-fluid">
 			<ul class="nav justify-content-center">
 				<li class="nav-item p-2 text-light">
-					Copyright &copy; Die Art'S Production 2021
+					Copyright © 2021
+					Bondowoso Mengaji. All Right Reserved
 				</li>
 			</ul>
 		</div>
