--- a/prtimes.html
+++ b/prtimes.html
@@ -157,6 +157,10 @@
 									Harian
 								</a>
 							</li>
+							<li><a class="drop dropdown-item" href="sholat.html"><img src="img/alarm-fill.svg" alt=""
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Bws
+								</a>
+							</li>
 							<li>
 								<a class="drop dropdown-item" href="murottal.html"><img src="img/book-black.svg" alt=""
 										class="mx-2" style="width: 1.9rem;">Murottal Qur'an</a>
@@ -326,7 +330,8 @@
 		<div class="container-fluid">
 			<ul class="nav justify-content-center">
 				<li class="nav-item p-2 text-light">
-					Copyright &copy; Die Art'S Production 2021
+					Copyright © 2021
+					Bondowoso Mengaji. All Right Reserved
 				</li>
 			</ul>
 		</div>
