--- a/sholat.html
+++ b/sholat.html
@@ -186,6 +186,10 @@
 									Harian
 								</a>
 							</li>
+							<li><a class="drop dropdown-item" href="prtimes.html"><img src="img/alarm-fill.svg" alt=""
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Kota
+								</a>
+							</li>
 							<li>
 								<a class="drop dropdown-item" href="murottal.html"><img src="img/book-black.svg" alt=""
 										class="mx-2" style="width: 1.9rem;">Murottal Qur'an</a>
