--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 								</a>
 							</li>
 							<li><a class="drop dropdown-item" href="sholat.html"><img src="img/alarm-fill.svg" alt=""
-										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Bws
 								</a>
 							</li>
 							<li><a class="drop dropdown-item" href="prtimes.html"><img src="img/alarm-fill.svg" alt=""
-										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat 2
+										class="mx-2" style="width: 1.7rem;"> Jadwal Sholat Kota
 								</a>
 							</li>
 							<li>
@@ -191,13 +191,13 @@
 												<li><b>AHAD</b></li>
 												setiap 2 pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
-												Kajian Kitab Kasyfus Syubuhat<br>
+												Kajian Kitab Al Bidayah Fil Aqidah<br>
 												Ustadz Agus Barnianto
-												<li><b>SENIN</b></li>
+												<!-- <li><b>SENIN</b></li>
 												setiap pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
 												Kajian Bahasa Arab Untuk Pemula<br>
-												Ustadz Afif Ibrahim, S.Ag
+												Ustadz Afif Ibrahim, S.Ag -->
 												<li><b>SELASA</b></li>
 												setiap pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
@@ -256,6 +256,12 @@
 												Ba'da Maghrib - selesai<br>
 												Kajian Kitab Al Minahul Aliyah Fi Bayan As Sunanul Yaumiyah<br>
 												Ustadz Muhammad Ayyub,lc
+												<li><b>MINGGU</b></li>
+												setiap pekan sekali<br>
+												Ba'da Maghrib - selesai<br>
+												Kajian Ad-Duruusul Muhimmah Liaammatil Ummah<br>
+												Karya Syaikh Abdul Aziz Bin Baz<br>
+												Ustadz Bramasta Singgih
 											</ol>
 										</div>
 									</div>
@@ -299,9 +305,14 @@
 												<li><b>RABU</b></li>
 												setiap 2 pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
+												Panduan Kitab : Aqidah Wasithiyyah<br>
+												Ustadz Arif Husnul Khuluq, S.H., M.H
+												<!-- <li><b>RABU</b></li>
+												setiap 2 pekan sekali<br>
+												Ba'da Maghrib - selesai<br>
 												Panduan Kitab : Lum'atul I'tiqod<br>
 												(Karya Imam Ibnu Qudamah)<br>
-												Ustadz Arif Husnul Khuluq, SH
+												Ustadz Arif Husnul Khuluq, SH -->
 												<li><b>RABU</b></li>
 												setiap 2 pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
