Perubahan jadwal kajian

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 												<li><b>RABU</b></li>
 												setiap 2 pekan sekali<br>
 												Ba'da Maghrib - selesai<br>
-												Panduan Kitab : Aqidah Wasithiyyah<br>
+												Kajian Kitab : Aqidah Wasithiyyah<br>
 												Ustadz Arif Husnul Khuluq, S.H., M.H
 												<!-- <li><b>RABU</b></li>
 												setiap 2 pekan sekali<br>
