--- a/kajian_harian.html
+++ b/kajian_harian.html
@@ -123,13 +123,13 @@
 								<div class="card card-body text-start">
 									<ol>
 										<li>
-											<b>Kajian Kitab Kasyfus Syubuhat</b><br>
+											<b>Kajian Kitab Al Bidayah Fil Aqidah</b><br>
 											Ustadz Agus Barnianto<br>
 											setiap 2 pekan sekali<br>
 											Ba'da Maghrib - selesai<br>
 										</li>
 										<li>
-											<b>Kajian Kitab Riyadus Sholihin</b><br>
+											<b>Kajian Kitab Shaidul Khatir</b><br>
 											Ustadz Afif Ibrahim, S.Ag<br>
 											setiap 2 pekan sekali<br>
 											Ba'da Maghrib - selesai
@@ -287,8 +287,7 @@
 											Ba'da Maghrib - selesai
 										</li>
 										<li>
-											<b>Panduan Kitab : Lum'atul I'tiqod<br>
-												(Karya Imam Ibnu Qudamah)</b><br>
+											<b>Kajian Kitab : Aqidah Wasithiyyah</b><br>
 											Ustadz Arif Husnul Khuluq, SH<br>
 											setiap 2 pekan sekali<br>
 											Ba'da Maghrib - selesai
